[gd_scene load_steps=43 format=2]

[ext_resource path="res://Art/Characters/Sorcerer Bot/death.png" type="Texture" id=1]
[ext_resource path="res://Art/Characters/Sorcerer Bot/damaged.png" type="Texture" id=2]
[ext_resource path="res://Art/Characters/Sorcerer Bot/idle.png" type="Texture" id=3]
[ext_resource path="res://Art/Characters/Sorcerer Bot/attack 2.png" type="Texture" id=4]
[ext_resource path="res://Art/Characters/Sorcerer Bot/attack 1.png" type="Texture" id=5]
[ext_resource path="res://Art/Characters/Sorcerer Bot/walk.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Characters/SorcererBot.gd" type="Script" id=7]
[ext_resource path="res://Scenes/EnemyFX.tscn" type="PackedScene" id=8]
[ext_resource path="res://Shaders/Flash.tres" type="Material" id=14]
[ext_resource path="res://Scripts/SorcererStand.gd" type="Script" id=15]
[ext_resource path="res://Sounds/SoundEffects/Squelch.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/SoundEffects/teleport.wav" type="AudioStream" id=17]
[ext_resource path="res://Sounds/SoundEffects/wheel2.wav" type="AudioStream" id=18]
[ext_resource path="res://Sounds/SoundEffects/chargeshot2.wav" type="AudioStream" id=19]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 3.0

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "launch_orbs"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Die"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("StepAudio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 19 )
} ],
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("StepAudio:pitch_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StepAudio:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -12.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Special"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "detonate_orbs"
}, {
"args": [  ],
"method": "area_attack"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("StepAudio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 1.67574,
"start_offset": 0.0,
"stream": ExtResource( 18 )
} ],
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("StepAudio:pitch_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StepAudio:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -18.0 ]
}

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="CapsuleShape2D" id=9]
radius = 6.3286
height = 13.1582

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 354, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 472, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 590, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 708, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 826, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 118, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 236, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 354, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 472, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 118, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 236, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 354, 0, 118, 107 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 472, 0, 118, 107 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
} ]

[sub_resource type="Shader" id=26]
code = "shader_type canvas_item;

uniform float RESOLUTION = 1.0;
uniform float FREQ = 1.0;
uniform float ALPHA = 1.0;
uniform float ALPHA_SHIFT = 0.0;
uniform vec3 color = vec3(1, 1, 1);

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(21.6782397, 5.4359876739)))*1000.3475938);
}

vec2 quantize(vec2 v, float r){
	return floor(v*r)/r;
}

void fragment(){
	vec2 QUV = quantize(FRAGCOORD.xy, RESOLUTION);
	float tex_alpha = texture(TEXTURE, UV).a;
	COLOR = vec4(color, max(0, (rand(QUV + TIME*FREQ)+ALPHA_SHIFT)*ALPHA*tex_alpha));
}

"

[sub_resource type="ShaderMaterial" id=27]
shader = SubResource( 26 )
shader_param/RESOLUTION = 0.2
shader_param/FREQ = 0.002
shader_param/ALPHA = 0.7
shader_param/ALPHA_SHIFT = -0.336
shader_param/color = Vector3( 1, 0.5, 0.5 )

[sub_resource type="Curve" id=28]
_data = [ Vector2( 0, 0.409091 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.2 ), 0.0, 0.0, 0, 0 ]

[node name="SorcererBot" type="KinematicBody2D" groups=[
"enemy",
"enemylike",
"host",
]]
collision_layer = 0
collision_mask = 1025
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
light_mask = 5
material = ExtResource( 14 )
position = Vector2( 7, -37 )
texture = ExtResource( 5 )
hframes = 8
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Die = SubResource( 3 )
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Special = SubResource( 6 )
anims/Walk = SubResource( 7 )

[node name="AttackCollider" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackCollider"]
scale = Vector2( 4, 4 )
shape = SubResource( 8 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"hitbox",
]]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 9 )

[node name="JojoReference" type="Area2D" parent="." groups=[
"hitbox",
]]
light_mask = 2
position = Vector2( 70, 0 )
input_pickable = false
collision_layer = 4
collision_mask = 2
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="JojoReference"]
modulate = Color( 2, 2, 2, 1 )
light_mask = 5
position = Vector2( 7, -37 )
frames = SubResource( 25 )
animation = "Attack"
frame = 9
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="JojoReference"]
shape = SubResource( 9 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="JojoReference"]
stream = ExtResource( 16 )
max_distance = 1000.0
attenuation = 1.5

[node name="OrbDetonateAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 70, 0 )
stream = ExtResource( 17 )
volume_db = -4.0
max_distance = 1000.0
attenuation = 1.5

[node name="StepAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 70, 0 )
stream = ExtResource( 19 )
volume_db = -12.0
pitch_scale = 0.5
max_distance = 1000.0
attenuation = 1.5

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 1.4, 2.2, 1.66, 1 )
show_behind_parent = true
light_mask = 2
material = SubResource( 27 )
points = PoolVector2Array( 0, 0, 200, -100 )
width = 5.0
width_curve = SubResource( 28 )
default_color = Color( 0.4, 0.501961, 1, 1 )
texture_mode = 1
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="EnemyFX" parent="." instance=ExtResource( 8 )]

[node name="ClearMoon" parent="EnemyFX" index="2"]
position = Vector2( 0, 5 )
frame = 14

[node name="HealthBar" parent="EnemyFX" index="3"]
margin_top = -30.0
margin_bottom = -22.0

[node name="Shadow" parent="EnemyFX" index="4"]
position = Vector2( 0, 14 )
scale = Vector2( 1, 1 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="EnemyFX"]
